# Qiita

./: .env.compute-orchestrator.example  .env.control-plane.example  .env.data-plane.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOY_CHECKLIST.md  LICENSE  Makefile  README.md
qiita-common/: README.md  pyproject.toml
qiita-common/src/qiita_common/: __init__.py  actions.py  api_paths.py  auth_constants.py  backend_failure.py  chunking.py  client.py  compute_backend_client.py  config.py  duckdb_miint.py  hashing.py  host_filter_plan.py  illumina.py  log.py  log_tail.py  models.py  parquet.py
qiita-common/tests/: test_actions.py  test_alignment_doget_request.py  test_api_paths.py  test_architecture_tree_sync.py  test_backend_failure.py  test_chunking.py  test_client.py  test_compute_backend_client.py  test_duckdb_miint.py  test_duckdb_version_sync.py  test_hashing.py  test_host_filter_plan.py  test_illumina.py  test_log.py  test_log_tail.py  test_makefile_doc_sync.py  test_models.py  test_models_ena.py  test_models_ena_import.py  test_models_users.py  test_models_work_ticket.py  test_qc_report_merge.py  test_smoke.py  test_step_plan_models.py
qiita-compute-orchestrator/: README.md  pyproject.toml
qiita-compute-orchestrator/src/qiita_compute_orchestrator/: backend.py  config.py  cp_client.py  data_plane_client.py  derived_store.py  job_resource_plan.py  main.py  miint.py  miint_staging.py  read_count.py  read_source.py  read_staging.py  reference.py  reference_artifact.py  registration.py  runner.py  sequence_range.py  sequence_range_retry.py  sequencing_run.py  step.py  subject.py
qiita-compute-orchestrator/tests/: conftest.py  helpers.py  test_assembly_run_config.py  test_backend.py  test_bam_to_parquet.py  test_bcl_convert_manifest_writer.py  test_bcl_convert_prep.py  test_compute_readiness.py  test_config.py  test_data_plane_client.py  test_deploy_scripts.py  test_derived_store.py  test_fastq_to_parquet.py  test_hash_job.py  test_ingest_ena_reads.py  test_ingest_reads.py  test_job_resource_plan.py  test_jobs_discovery.py  test_jobs_main.py  test_launcher_failure.py  test_load_job.py  test_local_native_dispatch.py  test_manifest_writer.py  test_miint_memory.py  test_miint_smoke.py  test_miint_staging.py  test_pacbio_export_reads.py  test_pacbio_ingest.py  test_read_source.py  test_reference_artifact.py  test_routes_step.py  test_run_native_job.py  test_sequence_range.py  test_sequenced_pool_preflight.py  test_sif_build_spec.py  test_slurm.py  test_slurm_backend.py  test_slurm_client.py  test_smoke.py  test_workflow_container_scope_pin.py  (+1 more)
qiita-compute-orchestrator/tests/jobs/: conftest.py  test_align_sharded.py  test_amplicon_deblur.py  test_annotation_ingest_smoke.py  test_assembly_coverage.py  test_assembly_hash.py  test_assembly_load.py  test_bam_to_parquet_miint_contract.py  test_build_bowtie2_index.py  test_build_minimap2_index.py  test_build_routing_index.py  test_build_rype_index.py  test_coverage_depth.py  test_coverage_depth_smoke.py  test_estimate_feature_table.py  test_golay_demux.py  test_hash_sequences.py  test_host_filter.py  test_host_filter_smoke.py  test_lima_chain_smoke.py  test_masked_export_fastq_contract.py  test_qc.py  test_qc_miint_contract.py  test_qc_report.py  test_qc_smoke.py  test_read_count.py  test_read_mask_chain_case5_smoke.py  test_reference_load.py  test_sam_bam_writer_miint_contract.py  test_stage_local_fasta.py  test_syndna.py  test_syndna_smoke.py
qiita-control-plane/: README.md  pyproject.toml
qiita-control-plane/db/migrations/: 001_create_schema.sql  20260407000001_reference_tables.sql  20260417000000_drop_phylogeny_tip_feature.sql  20260423000000_principals.sql  20260423000001_studies.sql  20260423000002_terminologies.sql  20260423000003_metadata_checklists.sql  20260423000004_biosample_fields.sql  20260423000005_biosamples.sql  20260423000006_sequencing_runs.sql  20260423000007_prep_protocols_and_sequenced_sample_fields.sql  20260423000008_sequenced_samples.sql  20260423000009_metadata_checklist_fields.sql  (+108 more)
qiita-control-plane/tests/: conftest.py  test_actions_library.py  test_actions_loader.py  test_actions_sync.py  test_actions_sync_db.py  test_admin_cli.py  test_amplicon_resolvers.py  test_api_docs.py  test_api_token.py  test_api_tokens.py  test_audit.py  test_auth.py  test_backfill_mask_idx.py  test_block_plan.py  test_block_planner.py  test_block_read.py  test_block_schema.py  test_cli_login.py  test_config.py  test_context_validator.py  test_coverage_mint.py  test_coverage_pins.py  test_db.py  test_dispatch.py  test_dp_fetch_classifier.py  test_email_receipt_schema.py  test_ena_import.py  test_enum_parity.py  test_exception_flags.py  test_fanout_dispatch.py  test_feature_table_resolver.py  test_genome_schema.py  test_guards.py  test_health.py  test_healthz.py  test_host_filter_resolver.py  test_host_taxon_backfill.py  test_landing.py  test_lima_pins.py  test_mask_definition_schema.py  (+37 more)
qiita-data-plane/: Cargo.toml  README.md
qiita-data-plane/src/: auth.rs  config.rs  ducklake.rs  flight_service.rs  main.rs  miint.rs
tests/integration/: _pg_env.py  _runner_helpers.py  conftest.py  docker-compose.yml  pyproject.toml  test_action_library.py  test_action_sync.py  test_admin_endpoints.py  test_align_block_e2e.py  test_api_token.py  test_api_tokens.py  test_auth_boundary.py  test_auth_endpoints.py  test_auth_schema.py  test_db.py  test_db_deps.py  test_doget.py  test_doput.py  test_e2e_reference.py  test_ena_import_e2e.py  test_ena_import_live_e2e.py  test_ena_ingest_e2e.py  test_ena_resolver_live.py  test_estimate_feature_table.py  test_feature_minting.py  test_feature_split.py  test_hash_mint_pipeline.py  test_library_dispatch.py  test_load_pipeline.py  test_local_reference_add_smoke.py  test_masked_read_export_e2e.py  test_native_step_smoke.py  test_orchestrator_auth.py  test_read_mask_block_e2e.py  test_read_mask_e2e.py  test_reference.py  test_reference_add_smoke.py  test_reference_fk_migration.py  test_reference_stream.py  test_reference_stream_build.py  (+17 more)
(+497 files in other folders)
