[project]
name = "qiita-common"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_common"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
