[project]
name = "qiita-common"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_common"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
