[project]
name = "qiita-compute-orchestrator"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qiita-common",
    # SlurmBackend talks to slurmrestd over HTTP; declared directly
    # rather than relying on the transitive dep through qiita-common.
    "httpx>=0.28",
    # LocalBackend uses DuckDB+miint in-process to stand in for SLURM in
    # dev/test. SlurmBackend won't need it, but the orchestrator runs both
    # backends from the same image, so the dep stays.
    "duckdb>=1.5.2",
    # bcl_convert_prep reads the vendored sequencer_types.yml at import
    # time to derive the {machine_prefix: model_name} table; declare the
    # YAML parser directly rather than relying on transitive resolution.
    "pyyaml>=6.0",
    # bcl_convert_prep imports `save_legacy_csv` from
    # run_preflight.legacy.api at execute() time. SHA pin is required
    # so a re-vendor of the upstream is explicit. To bump: read the
    # `def save_legacy_csv` signature on a newer SHA and update the
    # ref + comment together so an unrelated upstream change can't
    # silently swap in.
    "run-preflight @ git+https://github.com/the-miint/kl-run-preflight@0ccab487db83ff0624998c14d664304faa5470cc",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15",
]

[tool.uv.sources]
qiita-common = { path = "../qiita-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_compute_orchestrator"]

# run-preflight is pinned as a git+https direct reference (see the
# matching comment on the dependency). Hatchling refuses direct
# references in `project.dependencies` by default; opt in explicitly
# so `uv sync` / `pip install` against this pyproject succeed.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
