[project]
name = "qiita-compute-orchestrator"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qiita-common",
    # SlurmBackend talks to slurmrestd over HTTP; declared directly
    # rather than relying on the transitive dep through qiita-common.
    "httpx>=0.28",
    # LocalBackend uses DuckDB+miint in-process to stand in for SLURM in
    # dev/test. SlurmBackend won't need it, but the orchestrator runs both
    # backends from the same image, so the dep stays.
    "duckdb>=1.5.3",
    # bcl_convert_prep imports `save_bclconvert_v1_csv` from
    # run_preflight at execute() time. SHA pin is required so a
    # re-vendor of the upstream is explicit. To bump: read the
    # `def save_bclconvert_v1_csv` signature on a newer SHA and update
    # the ref + comment together so an unrelated upstream change can't
    # silently swap in. The control plane pins the same SHA (it imports
    # `get_illumina_sample_info` from the same release) so a re-vendor
    # is a coordinated bump; an integration parity test enforces parity.
    "run-preflight @ git+https://github.com/the-miint/kl-run-preflight@dcce1f37c0c940478063389ef00394816bda0a2c",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15",
]

[tool.uv.sources]
qiita-common = { path = "../qiita-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_compute_orchestrator"]

# run-preflight is pinned as a git+https direct reference (see the
# matching comment on the dependency). Hatchling refuses direct
# references in `project.dependencies` by default; opt in explicitly
# so `uv sync` / `pip install` against this pyproject succeed.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
