[project]
name = "qiita-control-plane"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qiita-common",
    "asyncpg>=0.31",
    "pyarrow>=19",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.28",
]

[project.scripts]
qiita-admin = "qiita_control_plane.cli.admin:main"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15",
]

[tool.uv.sources]
qiita-common = { path = "../qiita-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_control_plane"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "db: tests that require a Postgres database (deselect with -m 'not db')",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
