[project]
name = "qiita-control-plane"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qiita-common",
    "asyncpg>=0.31",
    "pyarrow>=19",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.28",
    "pyyaml>=6",
    "duckdb>=1.5",
    "jsonschema>=4.20",
    "jinja2>=3.1",
    # gRPC health-check stubs for the DP probe in /health. Used to
    # ping the data plane's `grpc.health.v1.Health/Check` service
    # without depending on gRPC reflection (DP reflection is a
    # separate ops-tooling concern; see issue #54).
    "grpcio>=1.66",
    "grpcio-health-checking>=1.66",
    # The submit-bcl-convert CLI handler imports `get_illumina_sample_info`
    # from run_preflight at handler call time to extract per-illumina_sample
    # biosample + bioproject info from the operator's preflight SQLite. SHA
    # pin matches the orchestrator (which calls `save_bclconvert_v1_csv`
    # from the same release) so a re-vendor is a coordinated bump;
    # an integration parity test enforces parity.
    "run-preflight @ git+https://github.com/the-miint/kl-run-preflight@0c476dfd9f1fd4b3b2bfc54e1b301e3c09cdc879",
]

[project.scripts]
qiita-admin = "qiita_control_plane.cli.admin:main"
qiita = "qiita_control_plane.cli.user:main"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15",
]

[tool.uv.sources]
qiita-common = { path = "../qiita-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_control_plane"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "db: tests that require a Postgres database (deselect with -m 'not db')",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
