[project]
name = "qiita-control-plane"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qiita-common",
    "asyncpg>=0.31",
    "pyarrow>=19",
    "pyjwt[crypto]>=2.9",
    # Ed25519 Flight-ticket signing (`auth/tickets.py`) imports `cryptography`
    # directly. It also arrives transitively via `pyjwt[crypto]`, but a
    # trust-boundary module must not rely on a transitive dep — pin it explicitly.
    "cryptography>=44",
    "httpx>=0.28",
    "pyyaml>=6",
    "duckdb>=1.5.4",
    "jsonschema>=4.20",
    "jinja2>=3.1",
    # Async SMTP client for the email-notification transport.
    # Async so a slow relay never blocks the event loop.
    "aiosmtplib>=3.0",
    # gRPC health-check stubs for the DP probe in /health. Used to
    # ping the data plane's `grpc.health.v1.Health/Check` service
    # without depending on gRPC reflection (DP reflection is a
    # separate ops-tooling concern; see issue #54).
    "grpcio>=1.66",
    "grpcio-health-checking>=1.66",
    # The submit-bcl-convert CLI handler imports `get_illumina_sample_info`
    # from run_preflight at handler call time to extract per-illumina_sample
    # biosample + study accession info from the operator's preflight SQLite. SHA
    # pin matches the orchestrator (which calls `save_bclconvert_v1_csv`
    # from the same release) so a re-vendor is a coordinated bump;
    # an integration parity test enforces parity.
    "run-preflight @ git+https://github.com/the-miint/kl-run-preflight@dcce1f37c0c940478063389ef00394816bda0a2c",
]

[project.scripts]
# Entry points target the import-clean shim (cli._bootstrap), NOT cli.admin/cli.user
# directly: the shim imports the real `main` lazily so a stale qiita_common path-dep
# surfaces as an actionable "uv sync --reinstall-package qiita-common" message
# instead of a raw import-time traceback. The real main()s stay intact below the
# shim and are still imported by it (and by tests / the redeploy CLI-venv probe).
qiita-admin = "qiita_control_plane.cli._bootstrap:qiita_admin"
qiita = "qiita_control_plane.cli._bootstrap:qiita"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3",
    "httpx>=0.28",
    "ruff>=0.15",
]

[tool.uv.sources]
qiita-common = { path = "../qiita-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiita_control_plane"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "db: tests that require a Postgres database (deselect with -m 'not db')",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
