[package]
name = "qiita-data-plane"
version = "2026.3.0"
edition = "2021"

[[bin]]
name = "qiita-data-plane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-health = "0.14"
arrow-flight = "58"
duckdb = { version = "1.10501.0" }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
