[package]
name = "qiita-data-plane"
version = "2026.3.0"
edition = "2021"

[[bin]]
name = "qiita-data-plane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-health = "0.14"
# tonic-reflection lets grpcurl introspect this server's services
# without a local .proto file — exposed for operator-tooling
# (`make verify-health`). Internal callers don't need reflection.
# See issue #54 for the failure mode this fixes.
tonic-reflection = "0.14"
arrow-flight = "58"
arrow-array = "58"
arrow-schema = "58"
# DoPut writes incoming Arrow stream as Parquet directly. The data plane's
# embedded DuckDB cannot ingest an arbitrary Arrow schema without C-API
# gymnastics, so the parquet crate from the arrow-rs ecosystem is the
# cleanest path. Keep version pinned to arrow-* major.
parquet = "58"
duckdb = { version = "1.10502.0" }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures = "0.3.31"

[features]
# Enable tests that require external services (Postgres on :5433).
# Run with: cargo test --features integration
integration = []

[dev-dependencies]
serial_test = "3"
tempfile = "3"
