[project]
name = "qiita-integration-tests"
version = "2026.3.0"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "asyncpg>=0.31",
    "pyarrow>=19",
    "qiita-common",
    "qiita-control-plane",
    "qiita-compute-orchestrator",
]

[tool.uv.sources]
qiita-common = { path = "../../qiita-common" }
qiita-control-plane = { path = "../../qiita-control-plane" }
qiita-compute-orchestrator = { path = "../../qiita-compute-orchestrator" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
